<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/departure_airports"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/departure_airports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/arrival_airports"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/arrival_airports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingRight="5sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/date_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/travel_date"
            style="?android:attr/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/set_travel_date_hint"
            android:padding="10dp"
            android:textSize="16sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="showDatePickerDialog"
            android:padding="2dp"
            android:text="@string/set_date"
            android:textSize="16sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/flights_preview_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:showDividers="beginning|middle|end" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/flights_preview_table_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_available_flights"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>
        <!--
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/departure_time_heading"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/arrival_time_heading"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/carrier_heading"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>
        -->

        <ScrollView
            android:id="@+id/flights_preview_table_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/flights_preview_table_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:showDividers="beginning|middle|end" >
            </TableLayout>
        </ScrollView>
    </TableLayout>

</LinearLayout>