<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp" >

    <LinearLayout
        android:id="@+id/details_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp" >

        <TextView
            android:id="@+id/departure_iata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/departure_airlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/departure_flight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/departure_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/departing_flight_image_description"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:scaleType="center"
            android:src="@drawable/ic_departure" />

        <TextView
            android:id="@+id/departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/departure_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/arriving_flight_image_description"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrival" />

        <TextView
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/arrival_airport_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="2dp"
            android:text="@string/book_flight_action"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_line_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/Gate"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/arrival_gate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/Terminal"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/arrival_terminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>